--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,8 @@
 
 .app {
     /*background:url(../img/logo.png) no-repeat center top;  170px x 200px */
-   
+    position:relative;             /* position in the center of the screen */
+    top:20%;
     height:auto;                   /* text area height */
     width:90%;                   /* text area width */
     text-align:center;
@@ -114,10 +115,7 @@
 	color:#fff;
 	text-decoration:underline;
 }
-#callAjaxPage > div.ui-content {
-	position: absolute;
-    top: 20%;
-}
+
 #loginform > p.submit > div > span {
 	color:#3366bc;
 }
@@ -125,12 +123,4 @@
 input {
 	margin-bottom:5px;
 	margin-top:5px;
-}
-#scan {
-	display: block;
-    height: 100px;
-    width: 100px;
-    position: absolute;
-    bottom: 0px;
-    left: 0;
 }
