--- a/css/main.css
+++ b/css/main.css
@@ -122,3 +122,11 @@ input {
 	margin-bottom:5px;
 	margin-top:5px;
 }
+#scan {
+	width: 100px;
+    height: 100px;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
