--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
          /* image height is 200px (bottom 20px are overlapped with text) */
      /* offset vertical: half of image height and text area height */
                                    /* offset horizontal: half of text area width */
+	font-size:1.5em;
 }
 #druga .app {
 	width:100%;
@@ -20,9 +21,8 @@
 /******** BUTTON *********/
 
 #druga .box{
-	min-width: 100px;
-    min-height: 217px;
-    width: 50%;
+	width: 300px;
+    height: 300px;
   border-top:2px solid #fff;
   border-radius:50%;
   margin:50px auto 50px;
@@ -39,8 +39,8 @@
   position:relative;
 }
 #druga .box:active{
-  width:100px;
-  height:100px;
+  width:300px;
+  height:300px;
 	border-radius:50%;
   border-top:none;
   border:2px solid #BAB7AE;
@@ -82,7 +82,7 @@
   width:15px;
   border-radius:50%;
   background: linear-gradient(#AEADAA,#BAB7AE);
-  margin:95px auto;
+  margin:137px auto;
 }
 
 
@@ -90,8 +90,8 @@
 .event.recived {
     background-color: #3366bc!important;
     display: block;
-    height: 24px;
-    padding-top: 11px;
+    height: auto;
+    padding: 5px;
 }
 
 #callAjaxPage > div.ui-bar-b.ui-header,
