--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,15 @@
          /* image height is 200px (bottom 20px are overlapped with text) */
      /* offset vertical: half of image height and text area height */
                                    /* offset horizontal: half of text area width */
-	font-size:1.5em;
+	
 }
 #druga .app {
 	width:100%;
+	font-size:1.5em;
 }
-
+#callAjaxPage > div.ui-content > div > img {
+	margin-top:10%;
+}
 #druga > div.ui-content > div > img {
 	margin-bottom:30px;
 }
@@ -141,305 +144,10 @@ input {
 }
 #callAjaxForm > div {
 	height: 100%;
-    padding-top: 25%;
-    padding-bottom: 25%;
+   
 }
 #druga > div.ui-content > div > img {
 	max-width: 70%;
     width: 50%;
 }
-/*********** MOBILE CSS ****************/
 
-@charset "utf-8";
-
-.ui-content {
-	background-color: #f1e7dc;
-	border-top-style: none;
-	border-right-style: none;
-	border-bottom-style: none;
-	border-left-style: none;
-	padding:0;
-}
-.logout {
-	float: right;
-	margin-right: 15px;
-}
-.logout2 {
-	float: right;
-	padding: 0px;
-	margin-top: 0px;
-	margin-right: 15px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-}
-.nazad {
-	margin-left: 15px;
-}
-.ui-body-c {
-	background-color: #f1e7dc;
-	background-image:none;
-}
-.ui-header {
-	text-align: center;	
-}
-#callAjaxForm > div{
-	height: 100%;
-	padding-top: 25%;
-	padding-bottom: 25%;
-}
-.logo {
-	float:left;
-}
-#callAjaxPage > div.ui-bar-a.ui-footer {
-	position: absolute;
-	bottom: 0px;
-	text-align: center;
-}
-#callAjaxPage > div.ui-bar-a.ui-footer a{
-	color: #FFF;
-	text-decoration: none;	
-}
-.ui-br {
-	border-bottom:none;
-}
-#drugastranica > div.ui-bar-a.ui-footer{
-	bottom: 0px;
-	margin-top: 50px;
-	text-align: center;
-}
-#drugastranica > div.ui-bar-a.ui-footer a{
-	color: #FFF;
-	text-decoration: none;
-	margin: 0px;
-	padding: 0px;
-}
-.zadnji {
-	margin-bottom:80px;
-}
-#ucenik {
-	list-style-type: none;
-	width: 100%;
-	margin-top: 0px;
-	margin-right: auto;
-	margin-bottom: 0px;
-	margin-left: auto;
-	font-size: 10px;
-}
-#ucenik li {
-	display: block;
-	margin-right: auto;
-	margin-left: auto;
-	width: 300px;
-}
-#ucenik li p{
-	margin:0px;
-	padding:0;
-	display:block;
-}
-#ucenik li img{
-	float: left;
-	padding-bottom: 5px;
-	margin-right: 15px;
-	margin-top: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-left: 0px;
-	height: 35px;
-	width: 35px;
-}
-.menu ul {
-	list-style-type: none;
-	width: 100%;
-	text-align: center;	
-	display: block;	
-}
-.menu ul li {
-	float:left;
-}
-.menu ul li a {
-	font-size: 10px;
-		
-}
-#predmeti {
-	list-style-type: none;
-	padding-left: 10px;	
-}
-#predmeti li {
-	float: left;
-	height: 95px;
-	width: 80px;
-	text-align: center;
-	font-size: 9px;
-	margin-top: 5px;
-	margin-right: 3px;
-	margin-bottom: 5px;
-	margin-left: 3px;
-	padding: 0px;
-}
-#predmeti li a{
-	text-decoration: none;	
-}
-#postovi{
-	list-style-type: none;
-	padding: 0px;
-	width: 100%;
-}
-#postovi li{
-	margin-right: auto;
-	margin-left: auto;
-	width: 250px;
-	margin-top: 12px;
-	margin-bottom: 13px;
-}
-#postovi ul li span {
-	margin-right: auto;
-	margin-left: auto;
-}
-#postovi li img {
-	float: left;
-	margin-right: 10px;
-}
-.poruka {
-	padding-right: 5px;
-	padding-left: 5px;
-	padding-top: 15px;
-	padding-bottom: 10px;
-}
-.nazad img{
-	margin-left: 5px;
-	margin-top:5px;
-		
-}
-.nazad {
-	float: left;
-	padding: 0px;
-	margin-top: 0px;
-	margin-right: 15px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-}
-.podnaslovi {
-	text-align: center;
-	display: block;
-	padding: 0px;
-	width: 100%;
-	margin-top: 0px;
-	margin-right: auto;
-	margin-bottom: 0px;
-	margin-left: auto;	
-}
-.podnaslovi h3 {
-	padding: 0;
-	margin-bottom: 0;
-}
-.podnaslovi p {
-	margin:0;
-	padding:0;	
-}
-#tablica_lijevoc2 {
-	font-size: 12px;
-	text-align: center;
-	width: 100%;
-	margin-right: auto;
-	margin-left: auto;
-}
-#tablica_lijevoc2 td{
-	border: 1px solid #CCC;
-	margin: 0px;
-	padding: 0px;
-}
-#tablica_mjesci {
-	margin: 0px;
-	padding: 0px;
-	width: 100%;
-	text-align: center;
-	font-size: 10px;
-}
-#tablica_mjesci tr{
-}
-#nasaforma > table {
-	margin: 0px;
-	padding: 0px;
-	width: 100%;
-}
-.mjeseci h3 {
-	font-size: 23px;	
-}
-.rub {
-	font-size: 16px;
-}
-.mjeseci {
-	padding-left:10px;
-	padding-right:10px;
-	
-}
-#drugastranica > div.ui-bar-a.ui-footer > p {
-	color: #FFF;
-}
-#callAjaxForm {
-	width: 80%;
-	margin-right: auto;
-	margin-left: auto;
-	margin-top: 15px;
-	margin-bottom: 15px;
-	text-align: center;
-}
-#firstName {
-	margin-bottom: 10px;	
-}
-#sazetak {
-	width: 80%;
-	margin-right: auto;
-	margin-left: auto;	
-}
-#gore > img {
-	margin-right:20px;
-}
-#gori > img {
-	margin-right:20px;
-}
-#midd {
-	width: 80%;
-margin-right: auto;
-margin-left: auto;
-text-align: center;
-padding-top: 5%;
-height: 100%;
-margin-top: 5%;
-margin-bottom: 5%;
-}
-#ucenik {
-	padding-top:8px;
-}
-table > tbody > tr > td b{
-	padding-right:5px;
-}
-.hidden {
-display:none;
-}
-.visible {
-	display: block;
-	position: absolute;
-	top: 25%;
-	left: 25%;
-	
-}
-#foot {
-   position:relative;
-   left:0px;
-   bottom:0px;
-   width:100%;
-}
-
-/* IE 6 */
-* html #footer {
-   position:absolute;
-   top:expression((0-(footer.offsetHeight)+(document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight)+(ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop))+'px');
-}
-#zadnji {
-	margin-bottom: 90px;
-	height: 10px;
-	width: 100%;
-}
