--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@
   border-top:2px solid #fff;
   border-radius:50%;
   margin:50px auto 50px;
-  background-color:#EEEEEE;
+  /*background-color:#EEEEEE;*/
   background: linear-gradient(#EDEAE1,#CDC8B5);
   text-align:center;
   box-shadow:
