--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
   height:100px;
   border-top:2px solid #fff;
   border-radius:50%;
-  margin:50px auto 50px;
+  margin:10px auto 50px;
   background-color:#EEEEEE;
   background: linear-gradient(#EDEAE1,#CDC8B5);
   text-align:center;
@@ -77,6 +77,15 @@
 	box-shadow: inset 1px 0 1px 0px #D9D9D9; 
 }
 
+#druga p, #druga p a{
+  text-shadow: 1px 1px 1px white;
+  color:#7E7E7E;
+  text-align:center;
+  font-size:18px;
+  line-height:2;
+  text-decoration:none;
+  margin-bottom:30px;
+}
 #druga .box span{
   display:inline-block;
   box-shadow: 
@@ -86,7 +95,7 @@
   width:15px;
   border-radius:50%;
   background: linear-gradient(#AEADAA,#BAB7AE);
-  margin:43px auto;
+  margin:42px auto;
 }
 
 
