--- a/css/main.css
+++ b/css/main.css
@@ -164,14 +164,15 @@ input {
 .upis {
 	background-color:green;
 	color:#fff;
-	padding:2px;
+	padding:5px;
 	font-size:14px;
 	width:100%;
+	display:block;
 }
 .koristen {
 	background-color:red;
 	color:#fff;
-	padding:2px;
+	padding:5px;
 	font-size:14px;
 	width:100%;
 	display:block;
@@ -179,4 +180,5 @@ input {
 #info {
 	margin-bottom:25px;
 	width:100%;
+	border-radius:5px;
 }
