--- a/css/main.css
+++ b/css/main.css
@@ -164,20 +164,21 @@ input {
 .upis {
 	background-color:green;
 	color:#fff;
-	padding:5px;
+	padding:15px;
 	font-size:14px;
-	width:90%;
+	width:96%;
 	display:block;
 }
 .koristen {
 	background-color:red;
 	color:#fff;
-	padding:5px;
+	padding:15px;
 	font-size:14px;
-	width:90%;
+	width:96%;
 	display:block;
 }
 
 #info {
 	margin-bottom:10px;
+	min-height:60px;
 }
